css/hangmanstyles.css
body, html, pre, div {
	margin: 0;
	padding: 0;
	box-sizing: border-box;
}

h1.customfont {
	font-family: "My Custom Font", Verdana, Tahoma;
	text-align: center;
	color: #999999;
	margin-top: 7vh;
	font-size: 9em;
	letter-spacing: 0.06em;
}

/*Scroll bar shenanigans*/
body::-webkit-scrollbar {
  	/*width: 15px;*/
	background-color: #1e2122;
	color: #a29c91
}

body::-webkit-scrollbar-corner {
	background-color: #17191a;
}

body::-webkit-scrollbar-thumb {
	background-color: #424649;
}
/*End Scroll bar shenanigans*/

body {
	background-color: #16272b;
}

#asciiwrap {
	color: #999999;
	margin: 8vh auto 0;
	display: flex;
	align-items: center;
	justify-content: center;
	overflow: hidden;
}

#ascii {
	font-size: 0.8em;
	font-weight: bold;
	color: #000000 ;

}

#starred {
	/*padding-top: 20px;*/
	display: flex;
	align-items: center;
	justify-content: center;
	margin: auto;
	/*border: black solid 1px;*/
}

#info {
	display: flex;
	flex-direction: column;
	align-items: center;
	text-align: center;
	justify-content: space-around;
	/*border: black solid 1px;*/
	height: 30vh;
}

#info div {
	color: #999999;
	font-size: 1.7em;


}

#attemptbar {
	position: absolute;
	left: 0;
	border: 1px solid black;
	width: 10%;
	height: 10vh;
}


/*#infomessage {*/
/*	display: flex;*/
/*	align-items: center;*/
/*	justify-content: center;*/
/*	margin: auto;*/
/*	color: #999999;*/
/*	font-size: 3.5em;*/
/*	text-align: center;*/
/*}*/

#inputwrap {
	margin-left: 1vh;
	margin-right: 1vh;
	max-width: 600px;
	line-height: 0.7em;
}

#inputfield {
	text-align: center;
	color: #999999;
	background-color: transparent;
	border-color: #01050d40;
	transition: border 0.5s ease-in-out, background-color 0.8s ease-in-out;
	border-radius: 0.25rem;
	margin: auto 3px auto;
	box-shadow: unset;
}


#inputfield:focus {
	border-color: #00b10250;
	border-width: 1px;
    box-shadow: transparent;
	background-color: #0d161a;
}


#inputfield:hover {
	box-shadow: 0 0 0 .05rem #00a40240;
}

#inputbutton, #resetbutton {
	border-color: #01050d40;
}

#inputbutton:hover, #resetbutton:hover {
	background-color: #0d161a;
}

.btn-outline-secondary:active {
    color: #fff;
    background-color: #00b10250;
    border-color: #00b10250;
}

#inputbutton {
	/*border-left: 0;*/
}

#resetbutton {
	/*border-right: 0;*/
	border-top-right-radius: 0.25rem;
	border-bottom-right-radius: 0.25rem;
}

.starredtext {

	padding: 5vh 0 15vh;
	font-weight: 800;
	text-transform: uppercase;
	text-align: center;
	letter-spacing: 0.3em;
	color: #999999;
	font-size: 8.5em;
	height: 1.45em;

	/*margin-top: 1vh;*/
}

.starredtext .text-wrapper {
  position: relative;
  display: inline-block;
}

.starredtext .letter {
  display: inline-block;
  line-height: 1em;
}

.infosection {
	font-weight: 200;
	font-size: 2.5em;
	text-align: center;
	color: #999999;
}

.infosection .text-wrapper {
  position: relative;
  display: inline-block;
  padding-top: 0.1em;
  padding-right: 0.05em;
  padding-bottom: 0.15em;
}

.infosection .line {
	opacity: 0;
	position: absolute;
	left: 0;
	height: 2px;
	width: 100%;
	background-color: #fff;
	transform-origin: 100% 100%;
	bottom: 0;
	color: #00b10250;
}

.infosection .letter {
  display: inline-block;
  line-height: 1em;
}





/*// Extra small devices (portrait phones, less than 576px)*/
/*// No media query since this is the default in Bootstrap*/
/*// Extra large devices (large desktops, 1200px and up)*/
@media (max-width: 1200px) { h1.customfont{font-size: 7em} }
/*// Large devices (desktops, 992px and up)*/
@media (max-width: 992px) { h1.customfont{font-size: 6.5em } #ascii {font-size: 0.75em;} .starredtext {font-size: 6em;} #info div {font-size: 1.4em;} #finalmessage {font-size: 3em;} .infosection {font-size: 2.3em;}}
/*// Medium devices (tablets, 768px and up)*/
@media (max-width: 768px) { h1.customfont{font-size: 5.5em } #ascii {font-size: 0.55em;} .starredtext {font-size: 5em;} #info div {font-size: 1.2em;}#finalmessage {font-size: 2.5em;} .infosection {font-size: 1.7em;}}
/*// Small devices (landscape phones, 576px and up)*/
@media (max-width: 576px) { h1.customfont{font-size: 4em } #asciiwrap {margin-top: 4vh} #ascii {font-size: 0.37em;} .starredtext {font-size: 3em; height: 0.3vh;} #info div {font-size: 1em;}#finalmessage {font-size: 1.7em;} .infosection {font-size: 1.3em;}}

